# semantic-rendering

./: .gitignore  LICENSE  README.md  example_climate_analysis.html  example_climate_analysis.ipynb  example_widget.ipynb  pyproject.toml  semantic_app.bat  semantic_render.py  semantic_widget.py
.github/: FUNDING.yml
docs/: CNAME  index.html  semantic_render.py
