[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plotline"
version = "0.1.0"
description = "Streamline presentations from Jupyter. Display your plots and documentation - figure-first notebook viewing and slide decks, single file, stdlib only"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alex Borowiak" }]
keywords = ["jupyter", "notebook", "visualization", "presentation", "report"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: Jupyter",
]

[project.optional-dependencies]
widget = ["anywidget", "ipywidgets"]

[project.scripts]
plotline = "semantic_render:main"

[tool.setuptools]
py-modules = ["semantic_render", "semantic_widget"]
